--- a/src/Components/HomePage.css
+++ b/src/Components/HomePage.css
@@ -3,3 +3,23 @@
     margin-left: 10%;
     background-color: rgb(247, 239, 239);
 }
+.home-page-news-div{
+    padding: 20px 1%;
+    font-size: 15px;
+    color: rgb(168, 165, 165);
+}
+.upvote-icon{
+    color: rgb(168, 165, 165);
+    font-size: 10px;
+}
+.url{
+    font-size: 12px;
+    color: gray;
+}
+.url:hover{
+    text-decoration: underline;
+}
+.home-page-news-div p{
+    font-size: 13px;
+    color: gray;
+}
