--- a/src/Components/SearchPage.css
+++ b/src/Components/SearchPage.css
@@ -3,3 +3,29 @@
     margin-left: 10%;
     background-color: rgb(247, 239, 239);
 }
+.search-page-news-div{
+    padding: 20px 1%;
+    font-size: 15px;
+    color: rgb(168, 165, 165);
+}
+.upvote-icon{
+    color: rgb(168, 165, 165);
+    font-size: 10px;
+}
+.url{
+    font-size: 12px;
+    color: gray;
+}
+.url:hover{
+    text-decoration: underline;
+}
+.search-page-news-div p{
+    font-size: 13px;
+    color: gray;
+}
+.comment-text{
+    color: black;
+    font-size: 12px;
+    font-family: monospace;
+    line-height: -1;
+}
